# udf-parquet-flask

./: .gitignore  LICENSE  README.md  pyproject.toml
flask_app/: __init__.py  __init__.spec
flask_app/UDFDecoder/: DataTypes.py  Schema.py  UDFDecoder.py  __init__.py
flask_app/staticFiles/uploads/: data.parquet  data.udf
flask_app/templates/: index.html  index2.html  show_udf_data.html
